# Phantom-Flow

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  render-free.yaml  render.yaml
.github/workflows/: ci.yml  daily-report.yml  deploy-render.yml  deploy.yml  health-check.yml
core/: Dockerfile  dune  dune-project
core/lib/orderbook/: dune  orderbook.ml
core/lib/pnl/: dune  pnl.ml
core/lib/risk/: dune  risk.ml
core/lib/types/: dune  types.ml
core/test/: dune  test_risk.ml
deploy/: entrypoint.sh  supervisord.conf
docs/: architecture.md  deployment.md  strategies.md
docs/adr/: 001-multi-language-architecture.md  002-paper-trading-only.md
market-data/: Cargo.toml  Dockerfile
market-data/benches/: orderbook_benchmark.rs
market-data/src/: config.rs  error.rs  lib.rs  main.rs  parser.rs
market-data/src/orderbook/: book.rs  manager.rs  metrics.rs  mod.rs
market-data/src/publisher/: mod.rs
market-data/src/websocket/: client.rs  manager.rs  mod.rs
reports/: Dockerfile  generate.py  requirements.txt
reports/templates/: metrics_section.md.j2
scripts/: download-history.py  run-local.sh  setup-dev.sh
strategy/: Dockerfile  Dockerfile.api  pyproject.toml
strategy/src/: __init__.py  config.py  models.py  replay.py  safety.py  scheduler.py  shutdown.py  state_manager.py  versioning.py
strategy/src/api/: __init__.py  main.py
strategy/src/broker/: __init__.py  execution_simulator.py  paper_broker.py
strategy/src/features/: __init__.py  complementary_data.py  microstructure.py
strategy/src/signals/: __init__.py  imbalance_strategy.py
strategy/src/storage/: __init__.py  database.py
strategy/tests/: __init__.py  test_strategy.py
